# solaudit

./: .env.example  Cargo.toml  README.md
.github/workflows/: ci.yml
devnet_test_program/: Cargo.toml
devnet_test_program/src/: lib.rs
src/: lib.rs  main.rs
src/analysis/: engine.rs
src/cli/: args.rs
src/models/: types.rs
src/report/: mod.rs  writer.rs
src/rpc/: client.rs
src/scripts/: test.sh
tests/: devnet_integration.rs
