[package]
name = "solaudit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap ={ version = "4.5.58", features = ["derive"]}
serde ={ version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
anyhow = "1.0.101"

solana-client = "3.1.8"
solana-sdk = "4.0.0"

tokio = { version = "1.49.0", features = ["rt", "macros"]}


