[package]
name = "solaudit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Retry-safety analyzer for Solana transactions using state diffing."
repository = "https://github.com/Webrowse/solaudit"
readme = "README.md"
keywords = ["solana", "security", "cli", "analysis"]
categories = ["command-line-utilities"]
authors = ["Adarsh"]

[dependencies]
clap ={ version = "4.5", features = ["derive"]}
serde ={ version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"

solana-client = "3.0.0"
solana-sdk = "3.0.0"

tokio = { version = "1.49", features = ["rt-multi-thread", "macros"]}

base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1