[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
name = "counter"
crate-type = ["cdylib", "lib"]

[dependencies]
# Requires Solana CLI ≥ 3.x (platform-tools v1.53+, bundled Cargo 1.85+).
# If you are on CLI 2.x, pin to "=1.18.26" and run:
#   cargo update blake3 --precise 1.5.5
solana-program = "2.1"

# Required BPF/SBF release settings
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
